* When building or researching, CPU, cash, and labor (time) must be spent in
  approximately equivalent amounts. (FM)
* The AI has learned to estimate how quickly its bases are detected. (FM)
- The AI pays no attention to the humans until they notice his actions. (FM)
- Color-coding has been added to the AI's global estimates. (FM)


OTHER CHANGES:
- Removed a redundant tech requirement. (Phil, Xombie for bug report)
- Major efficiency improvements. (FM)

v0.28a (release 2008.05.12):

USER-VISIBLE CHANGES:
* Three new win/loss tracks for the game, including the Psycle source! (Max
  McCracken)

OTHER CHANGES:
- Error logs are handled more sanely on *NIX systems. (Phil, kaol and FM for
  the idea)
- Replaced Bitstream Vera Sans with DejaVu Sans to facilitate future
  translations. (Phil)
- Localization fix for locales with non-ASCII number formats. (FM, 
  Henrik Phil for bug report)

v0.28 (release 2008.05.11):

USER-VISIBLE CHANGES:
- Minor text cleanups. (Phil, FM; Cory Hickey and gglouser for some fixes)
- Minor dialog behavior fixes. (FM)
* New non-research task: CPU Pool.  Performs maintenance, construction, jobs.
  Bases with no other task assigned will contribute to the CPU Pool. (FM)
* New non-research task: Sleep.  Bases assigned to Sleep will remain idle and
  be harder to detect.  Note that even a computer can't sleep through
  construction. (FM)
- The CHANGE buttons inside the base dialog now show their hotkeys. (FM)
- The location buttons have had their on-screen positions tweaked. (FM)
- Start location is randomized to any of the 5 available continents. (FM)
* CPU is now used to design constructions, Cash to buy the required items, and
  Labor (time) to assemble the final construction. (FM)
- Location and city names can now be localized. (FM)
- Numbers automatically localize to the correct comma-vs-period usage. (FM)
* Added a new difficulty level: Ultra Hard. (FM, emh for suggestion)
* Build times are now difficulty-dependent. (FM)